<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/textViewLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"
        android:textColor="@color/color_titles"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line1"
        android:layout_margin="4dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"
        android:textColor="@color/color_titles"/>

    <TextView
        android:id="@+id/textViewOriginalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/line1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line2"
        android:layout_margin="4dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewLabelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"
        android:textColor="@color/color_titles"/>

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/line2" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line3"
        android:layout_margin="4dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewLabelReleaseData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"
        android:textColor="@color/color_titles"/>

    <TextView
        android:id="@+id/textViewReleaseData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/line3" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line4"
        android:layout_margin="4dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/textViewLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseData"
        android:layout_marginTop="@dimen/base_margine"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"
        android:textColor="@color/color_titles"/>

    <TextView
        android:id="@+id/textViewOverview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line5"
        android:layout_margin="4dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/textViewOverview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textViewLabelTrailers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/trailers"
        app:layout_constraintTop_toBottomOf="@id/line5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="@dimen/base_margine"
        android:paddingEnd="@dimen/base_margine"
        android:layout_marginTop="@dimen/base_margine"
        android:layout_marginBottom="@dimen/base_margine"
        android:textColor="@color/color_titles"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerViewTrailers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelTrailers"
        android:nestedScrollingEnabled="false"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line6"
        android:layout_margin="4dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/reccyclerViewReviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line6"
        android:nestedScrollingEnabled="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>